--- a/client-state/text-editor/task.css
+++ b/client-state/text-editor/task.css
@@ -1,3 +1,5 @@
+
+
 textarea {
   max-width: 100%;
   width: 100%;
@@ -7,4 +9,10 @@ textarea {
   font-family: Golos, Arial, sans-serif;
   border: 1px solid #e2e2e2;
   box-sizing: border-box;
+}
+
+.card {
+  flex-direction: column;
+  display: flex;
+  align-items: center;
 }
